HunterParser.py
# Generated from Hunter.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class HunterParser ( Parser ):

    grammarFileName = "Hunter.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'elif'", "'else'", "'while'", 
                     "'for'", "'in'", "'def'", "'return'", "'print'", "'import'", 
                     "'range'", "'and'", "'or'", "'not'", "<INVALID>", "'None'", 
                     "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'**'", 
                     "'='", "'+='", "'-='", "'*='", "'/='", "'=='", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'('", "')'", "'['", 
                     "']'", "','", "':'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'<INDENT>'", "'<DEDENT>'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELIF", "ELSE", "WHILE", "FOR", 
                      "IN", "DEF", "RETURN", "PRINT", "IMPORT", "RANGE", 
                      "AND", "OR", "NOT", "BOOL_LIT", "NONE_LIT", "PLUS", 
                      "MINUS", "STAR", "SLASH", "DOUBLESLASH", "PERCENT", 
                      "DOUBLESTAR", "ASSIGN", "PLUS_ASSIGN", "MINUS_ASSIGN", 
                      "STAR_ASSIGN", "SLASH_ASSIGN", "EQ", "NEQ", "LT", 
                      "LE", "GT", "GE", "LPAREN", "RPAREN", "LBRACKET", 
                      "RBRACKET", "COMMA", "COLON", "ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT", "INDENT", "DEDENT", "COMMENT", "WS", 
                      "NEWLINE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assignStmt = 2
    RULE_importStmt = 3
    RULE_printStmt = 4
    RULE_ifStmt = 5
    RULE_elifClause = 6
    RULE_elseClause = 7
    RULE_whileStmt = 8
    RULE_forStmt = 9
    RULE_returnStmt = 10
    RULE_funcDef = 11
    RULE_paramList = 12
    RULE_exprStmt = 13
    RULE_block = 14
    RULE_exprList = 15
    RULE_expr = 16
    RULE_orExpr = 17
    RULE_andExpr = 18
    RULE_notExpr = 19
    RULE_compareExpr = 20
    RULE_addExpr = 21
    RULE_mulExpr = 22
    RULE_unaryExpr = 23
    RULE_powerExpr = 24
    RULE_primaryExpr = 25
    RULE_listLit = 26

    ruleNames =  [ "program", "statement", "assignStmt", "importStmt", "printStmt", 
                   "ifStmt", "elifClause", "elseClause", "whileStmt", "forStmt", 
                   "returnStmt", "funcDef", "paramList", "exprStmt", "block", 
                   "exprList", "expr", "orExpr", "andExpr", "notExpr", "compareExpr", 
                   "addExpr", "mulExpr", "unaryExpr", "powerExpr", "primaryExpr", 
                   "listLit" ]

    EOF = Token.EOF
    IF=1
    ELIF=2
    ELSE=3
    WHILE=4
    FOR=5
    IN=6
    DEF=7
    RETURN=8
    PRINT=9
    IMPORT=10
    RANGE=11
    AND=12
    OR=13
    NOT=14
    BOOL_LIT=15
    NONE_LIT=16
    PLUS=17
    MINUS=18
    STAR=19
    SLASH=20
    DOUBLESLASH=21
    PERCENT=22
    DOUBLESTAR=23
    ASSIGN=24
    PLUS_ASSIGN=25
    MINUS_ASSIGN=26
    STAR_ASSIGN=27
    SLASH_ASSIGN=28
    EQ=29
    NEQ=30
    LT=31
    LE=32
    GT=33
    GE=34
    LPAREN=35
    RPAREN=36
    LBRACKET=37
    RBRACKET=38
    COMMA=39
    COLON=40
    ID=41
    INT_LIT=42
    FLOAT_LIT=43
    STRING_LIT=44
    INDENT=45
    DEDENT=46
    COMMENT=47
    WS=48
    NEWLINE=49

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(HunterParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HunterParser.StatementContext)
            else:
                return self.getTypedRuleContext(HunterParser.StatementContext,i)


        def getRuleIndex(self):
            return HunterParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = HunterParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 596107101458354) != 0):
                self.state = 54
                self.statement()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(HunterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(HunterParser.AssignStmtContext,0)


        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def printStmt(self):
            return self.getTypedRuleContext(HunterParser.PrintStmtContext,0)


        def importStmt(self):
            return self.getTypedRuleContext(HunterParser.ImportStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(HunterParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(HunterParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(HunterParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(HunterParser.ReturnStmtContext,0)


        def funcDef(self):
            return self.getTypedRuleContext(HunterParser.FuncDefContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(HunterParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = HunterParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 62
                self.assignStmt()
                self.state = 63
                self.match(HunterParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.printStmt()
                self.state = 66
                self.match(HunterParser.NEWLINE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 68
                self.importStmt()
                self.state = 69
                self.match(HunterParser.NEWLINE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 71
                self.ifStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 72
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 73
                self.forStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 74
                self.returnStmt()
                self.state = 75
                self.match(HunterParser.NEWLINE)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 77
                self.funcDef()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 78
                self.exprStmt()
                self.state = 79
                self.match(HunterParser.NEWLINE)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 81
                self.match(HunterParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return HunterParser.RULE_assignStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IndexAssign2DContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def LBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(HunterParser.LBRACKET)
            else:
                return self.getToken(HunterParser.LBRACKET, i)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HunterParser.ExprContext)
            else:
                return self.getTypedRuleContext(HunterParser.ExprContext,i)

        def RBRACKET(self, i:int=None):
            if i is None:
                return self.getTokens(HunterParser.RBRACKET)
            else:
                return self.getToken(HunterParser.RBRACKET, i)
        def ASSIGN(self):
            return self.getToken(HunterParser.ASSIGN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexAssign2D" ):
                return visitor.visitIndexAssign2D(self)
            else:
                return visitor.visitChildren(self)


    class MinusAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def MINUS_ASSIGN(self):
            return self.getToken(HunterParser.MINUS_ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMinusAssign" ):
                return visitor.visitMinusAssign(self)
            else:
                return visitor.visitChildren(self)


    class SimpleAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(HunterParser.ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleAssign" ):
                return visitor.visitSimpleAssign(self)
            else:
                return visitor.visitChildren(self)


    class PlusAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def PLUS_ASSIGN(self):
            return self.getToken(HunterParser.PLUS_ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlusAssign" ):
                return visitor.visitPlusAssign(self)
            else:
                return visitor.visitChildren(self)


    class SlashAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def SLASH_ASSIGN(self):
            return self.getToken(HunterParser.SLASH_ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSlashAssign" ):
                return visitor.visitSlashAssign(self)
            else:
                return visitor.visitChildren(self)


    class IndexAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def LBRACKET(self):
            return self.getToken(HunterParser.LBRACKET, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HunterParser.ExprContext)
            else:
                return self.getTypedRuleContext(HunterParser.ExprContext,i)

        def RBRACKET(self):
            return self.getToken(HunterParser.RBRACKET, 0)
        def ASSIGN(self):
            return self.getToken(HunterParser.ASSIGN, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndexAssign" ):
                return visitor.visitIndexAssign(self)
            else:
                return visitor.visitChildren(self)


    class StarAssignContext(AssignStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a HunterParser.AssignStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)
        def STAR_ASSIGN(self):
            return self.getToken(HunterParser.STAR_ASSIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStarAssign" ):
                return visitor.visitStarAssign(self)
            else:
                return visitor.visitChildren(self)



    def assignStmt(self):

        localctx = HunterParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignStmt)
        try:
            self.state = 116
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = HunterParser.SimpleAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.match(HunterParser.ID)
                self.state = 85
                self.match(HunterParser.ASSIGN)
                self.state = 86
                self.expr()
                pass

            elif la_ == 2:
                localctx = HunterParser.PlusAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(HunterParser.ID)
                self.state = 88
                self.match(HunterParser.PLUS_ASSIGN)
                self.state = 89
                self.expr()
                pass

            elif la_ == 3:
                localctx = HunterParser.MinusAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 90
                self.match(HunterParser.ID)
                self.state = 91
                self.match(HunterParser.MINUS_ASSIGN)
                self.state = 92
                self.expr()
                pass

            elif la_ == 4:
                localctx = HunterParser.StarAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.match(HunterParser.ID)
                self.state = 94
                self.match(HunterParser.STAR_ASSIGN)
                self.state = 95
                self.expr()
                pass

            elif la_ == 5:
                localctx = HunterParser.SlashAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 96
                self.match(HunterParser.ID)
                self.state = 97
                self.match(HunterParser.SLASH_ASSIGN)
                self.state = 98
                self.expr()
                pass

            elif la_ == 6:
                localctx = HunterParser.IndexAssignContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 99
                self.match(HunterParser.ID)
                self.state = 100
                self.match(HunterParser.LBRACKET)
                self.state = 101
                self.expr()
                self.state = 102
                self.match(HunterParser.RBRACKET)
                self.state = 103
                self.match(HunterParser.ASSIGN)
                self.state = 104
                self.expr()
                pass

            elif la_ == 7:
                localctx = HunterParser.IndexAssign2DContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 106
                self.match(HunterParser.ID)
                self.state = 107
                self.match(HunterParser.LBRACKET)
                self.state = 108
                self.expr()
                self.state = 109
                self.match(HunterParser.RBRACKET)
                self.state = 110
                self.match(HunterParser.LBRACKET)
                self.state = 111
                self.expr()
                self.state = 112
                self.match(HunterParser.RBRACKET)
                self.state = 113
                self.match(HunterParser.ASSIGN)
                self.state = 114
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(HunterParser.IMPORT, 0)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)

        def getRuleIndex(self):
            return HunterParser.RULE_importStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmt" ):
                return visitor.visitImportStmt(self)
            else:
                return visitor.visitChildren(self)




    def importStmt(self):

        localctx = HunterParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_importStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(HunterParser.IMPORT)
            self.state = 119
            self.match(HunterParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(HunterParser.PRINT, 0)

        def LPAREN(self):
            return self.getToken(HunterParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(HunterParser.RPAREN, 0)

        def exprList(self):
            return self.getTypedRuleContext(HunterParser.ExprListContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_printStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)




    def printStmt(self):

        localctx = HunterParser.PrintStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_printStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(HunterParser.PRINT)
            self.state = 122
            self.match(HunterParser.LPAREN)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 33157148035072) != 0):
                self.state = 123
                self.exprList()


            self.state = 126
            self.match(HunterParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(HunterParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def COLON(self):
            return self.getToken(HunterParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(HunterParser.BlockContext,0)


        def elifClause(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(HunterParser.ElifClauseContext)
            else:
                return self.getTypedRuleContext(HunterParser.ElifClauseContext,i)


        def elseClause(self):
            return self.getTypedRuleContext(HunterParser.ElseClauseContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = HunterParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(HunterParser.IF)
            self.state = 129
            self.expr()
            self.state = 130
            self.match(HunterParser.COLON)
            self.state = 131
            self.match(HunterParser.NEWLINE)
            self.state = 132
            self.block()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 133
                self.elifClause()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 139
                self.elseClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElifClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELIF(self):
            return self.getToken(HunterParser.ELIF, 0)

        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def COLON(self):
            return self.getToken(HunterParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(HunterParser.BlockContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_elifClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElifClause" ):
                return visitor.visitElifClause(self)
            else:
                return visitor.visitChildren(self)




    def elifClause(self):

        localctx = HunterParser.ElifClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elifClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(HunterParser.ELIF)
            self.state = 143
            self.expr()
            self.state = 144
            self.match(HunterParser.COLON)
            self.state = 145
            self.match(HunterParser.NEWLINE)
            self.state = 146
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(HunterParser.ELSE, 0)

        def COLON(self):
            return self.getToken(HunterParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(HunterParser.BlockContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_elseClause

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseClause" ):
                return visitor.visitElseClause(self)
            else:
                return visitor.visitChildren(self)




    def elseClause(self):

        localctx = HunterParser.ElseClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(HunterParser.ELSE)
            self.state = 149
            self.match(HunterParser.COLON)
            self.state = 150
            self.match(HunterParser.NEWLINE)
            self.state = 151
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(HunterParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def COLON(self):
            return self.getToken(HunterParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(HunterParser.BlockContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = HunterParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(HunterParser.WHILE)
            self.state = 154
            self.expr()
            self.state = 155
            self.match(HunterParser.COLON)
            self.state = 156
            self.match(HunterParser.NEWLINE)
            self.state = 157
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(HunterParser.FOR, 0)

        def ID(self):
            return self.getToken(HunterParser.ID, 0)

        def IN(self):
            return self.getToken(HunterParser.IN, 0)

        def expr(self):
            return self.getTypedRuleContext(HunterParser.ExprContext,0)


        def COLON(self):
            return self.getToken(HunterParser.COLON, 0)

        def NEWLINE(self):
            return self.getToken(HunterParser.NEWLINE, 0)

        def block(self):
            return self.getTypedRuleContext(HunterParser.BlockContext,0)


        def getRuleIndex(self):
            return HunterParser.RULE_forStmt
